--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Title</title>
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link href="./css/index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <nav>
@@ -46,31 +45,38 @@
           </p>
         </div>
       </div>
-      <div class="second-page page">
-        <div class="text-container container">
-          <h2>Dry aged</h2>
-          <h2>Alte Wutz, Dry Aged</h2>
-          <p>
-            Halt amet, consectetur Handtasche elit, sed do eiusmod tempor
-            Stuttgart ut labore et dolore magna 99 Luftballons Ut enim ad minim
-            veniam, Turnbeutel nostrud exercitation ullamco laboris nisi
-            Sprechen Sie deutsch aliquip ex ea commodo consequat. Wiener
-            Schnitzel aute irure dolor in reprehenderit Guten Tag mollit anim
-            Stuttgart. id latine indoctum complectitur HugoClub Mate mea meliore
-            denique nominavi id. Ohrwurm expetenda nam an, his ei Reise euismod
-            assentior.
-          </p>
-          <div class="buttons">
-            <a href="">Dry aged</a>
-            <a href="">Alte Wutz</a>
+      <div class="second-page">
+        <div class="second-page-child text">
+          <div class="second-page-text-container">
+            <h1>Dry aged</h1>
+            <h2>Alte Wutz, Dry Aged</h2>
+            <p>
+              Halt amet, consectetur Handtasche elit, sed do eiusmod tempor
+              Stuttgart ut labore et dolore magna 99 Luftballons Ut enim ad
+              minim veniam, Turnbeutel nostrud exercitation ullamco laboris nisi
+              Sprechen Sie deutsch aliquip ex ea commodo consequat. Wiener
+              Schnitzel aute irure dolor in reprehenderit Guten Tag mollit anim
+              Stuttgart.
+            </p>
+            <p>
+              id latine indoctum complectitur HugoClub Mate mea meliore denique
+              nominavi id. Ohrwurm expetenda nam an, his ei Reise euismod
+              assentior.
+            </p>
+            <div class="button-container">
+              <a href="">Dry aged</a>
+              <a href="">Alte Wurtz</a>
+            </div>
           </div>
         </div>
-        <div class="image-container container">
-          <div class="big-image"></div>
-          <div class="small-images">
-            <img src="slike/hrana2.jpg" alt="hrana" />
-            <img src="slike/hrana3.jpg" alt="hrana" />
-            <img src="slike/hrana4.jpg" alt="hrana" />
+        <div class="second-page-child">
+          <div class="second-page-images">
+            <div class="big-image"></div>
+            <div class="small-images-container">
+              <img src="slike/hrana2.jpg" alt="" />
+              <img src="slike/hrana3.jpg" alt="" />
+              <img src="slike/hrana4.jpg" alt="" />
+            </div>
           </div>
         </div>
       </div>
@@ -85,8 +91,8 @@
               <li>1 Tag</li>
               <li>lernen Sie die Kunst des Grillens</li>
             </ul>
-            <div class="buttons">
-              <a href="">Grillkurs</a>
+            <div class="button-container">
+              <a>Grillkurs</a>
             </div>
           </div>
         </div>
@@ -171,45 +177,32 @@
       <div class="sixth-page">
         <div class="text-container">
           <h2>Fleischversand</h2>
-          <div class="buttons">
+          <div class="button-container">
             <a href=""><b>Grillkurs</b></a>
           </div>
         </div>
       </div>
     </main>
     <div class="footer">
-      <div class="footer-child first-child">
-        <div class="text-container container">
-          <div class="info">
-            <i class="fa-solid fa-location-dot"></i>
-            <p>Klauprechtstraße 25</p>
-          </div>
-          <div class="info">
-            <p>76137 Karlsruhe, Germany</p>
-          </div>
-          <div class="info">
-            <i class="fa-solid fa-phone"></i>
-            <p>+49 721 358060</p>
-          </div>
-          <div class="info">
-            <i class="fa-solid fa-envelope"></i>
-            <p>info@partyservice-brath.de</p>
-          </div>
+      <div class="footer-child contact">
+        <div class="contact-container">
+          <p><i class="fa-solid fa-location-dot"></i>Klauprechtstraße 25</p>
+          <p class="moved">76137 Karlsruhe, Germany</p>
+          <p><i class="fa-solid fa-phone"></i>+49 721 358060</p>
+          <p><i class="fa-solid fa-envelope"></i>info@partyservice-brath.de</p>
         </div>
       </div>
-      <div class="footer-child second-child">
-        <img src="slike/footer-icon.svg" alt="footer icon" />
+      <div class="footer-child logo">
+        <img src="slike/logo.svg" alt="footer-icon" />
       </div>
-      <div class="footer-child second-child">
-        <div class="content">
-          <p>Besuchen Sie uns auf:</p>
-          <div class="icons">
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-youtube"></i>
-          </div>
-        </div>
+      <div class="footer-child social">
+        <p>
+          Besuchen Sie uns auf:
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-brands fa-youtube"></i></a>
+        </p>
       </div>
     </div>
     <script
